codegen-generator/targets/visa/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    STRING

Grammar

Rule 0     S' -> startpoint
Rule 1     primary_expression -> IDENTIFIER
Rule 2     primary_expression -> CONSTANT
Rule 3     primary_expression -> ( expression )
Rule 4     postfix_expression -> primary_expression
Rule 5     postfix_expression -> postfix_expression [ expression ]
Rule 6     postfix_expression -> postfix_expression [ expression : expression ]
Rule 7     postfix_expression -> postfix_expression . IDENTIFIER
Rule 8     postfix_expression -> postfix_expression ( )
Rule 9     postfix_expression -> postfix_expression ( argument_expression_list )
Rule 10    postfix_expression -> postfix_expression INC_OP
Rule 11    unary_expression -> postfix_expression
Rule 12    unary_expression -> - unary_expression
Rule 13    unary_expression -> ! unary_expression
Rule 14    unary_expression -> * unary_expression
Rule 15    unary_expression -> & unary_expression
Rule 16    unary_expression -> INC_OP unary_expression
Rule 17    unary_expression -> DEC_OP unary_expression
Rule 18    unary_expression -> ~ unary_expression
Rule 19    argument_expression_list -> expression
Rule 20    argument_expression_list -> argument_expression_list , expression
Rule 21    multiplicative_expression -> unary_expression
Rule 22    multiplicative_expression -> multiplicative_expression * unary_expression
Rule 23    multiplicative_expression -> multiplicative_expression / unary_expression
Rule 24    multiplicative_expression -> multiplicative_expression % unary_expression
Rule 25    additive_expression -> multiplicative_expression
Rule 26    additive_expression -> additive_expression + multiplicative_expression
Rule 27    additive_expression -> additive_expression - multiplicative_expression
Rule 28    shift_expression -> additive_expression
Rule 29    shift_expression -> shift_expression LEFT_OP additive_expression
Rule 30    shift_expression -> shift_expression RIGHT_OP additive_expression
Rule 31    relational_expression -> shift_expression
Rule 32    relational_expression -> relational_expression < shift_expression
Rule 33    relational_expression -> relational_expression > shift_expression
Rule 34    relational_expression -> relational_expression LE_OP shift_expression
Rule 35    relational_expression -> relational_expression GE_OP shift_expression
Rule 36    relational_expression -> relational_expression REL_OP shift_expression
Rule 37    equality_expression -> relational_expression
Rule 38    equality_expression -> equality_expression EQ_OP relational_expression
Rule 39    equality_expression -> equality_expression NE_OP relational_expression
Rule 40    and_expression -> equality_expression
Rule 41    and_expression -> and_expression & equality_expression
Rule 42    exclusive_or_expression -> and_expression
Rule 43    exclusive_or_expression -> exclusive_or_expression ^ and_expression
Rule 44    inclusive_or_expression -> exclusive_or_expression
Rule 45    inclusive_or_expression -> inclusive_or_expression | exclusive_or_expression
Rule 46    logical_and_expression -> inclusive_or_expression
Rule 47    logical_and_expression -> logical_and_expression LAND_OP inclusive_or_expression
Rule 48    logical_or_expression -> logical_and_expression
Rule 49    logical_or_expression -> logical_or_expression LOR_OP logical_and_expression
Rule 50    logical_is_expression -> logical_or_expression
Rule 51    logical_is_expression -> logical_or_expression IS logical_or_expression
Rule 52    conditional_expression -> logical_is_expression
Rule 53    conditional_expression -> logical_is_expression ? expression : conditional_expression
Rule 54    expression -> conditional_expression
Rule 55    expression -> unary_expression = conditional_expression
Rule 56    expression -> unary_expression ADD_ASSIGN conditional_expression
Rule 57    expression_statement -> ;
Rule 58    expression_statement -> expression ;
Rule 59    selection_statement -> IF ( expression ) statement
Rule 60    selection_statement -> IF ( expression ) statement ELSE statement
Rule 61    iteration_statement -> WHILE ( expression ) statement
Rule 62    iteration_statement -> FOR ( expression_statement expression_statement expression ) statement
Rule 63    compound_statement -> { }
Rule 64    compound_statement -> { statement_list }
Rule 65    compound_statement -> { declaration_list }
Rule 66    compound_statement -> { declaration_list statement_list }
Rule 67    statement -> expression_statement
Rule 68    statement -> compound_statement
Rule 69    statement -> iteration_statement
Rule 70    statement -> selection_statement
Rule 71    statement_list -> statement
Rule 72    statement_list -> statement_list statement
Rule 73    declaration_list -> declaration
Rule 74    declaration_list -> declaration_list declaration
Rule 75    declaration -> declaration_specifiers init_declarator_list ;
Rule 76    declaration_specifiers -> UD
Rule 77    declaration_specifiers -> D
Rule 78    declaration_specifiers -> bit
Rule 79    init_declarator_list -> init_declarator
Rule 80    init_declarator_list -> init_declarator_list , init_declarator
Rule 81    init_declarator -> IDENTIFIER
Rule 82    init_declarator -> IDENTIFIER = expression
Rule 83    startpoint -> statement_list
Rule 84    startpoint -> declaration_list statement_list

Terminals, with rules where they appear

!                    : 13
%                    : 24
&                    : 15 41
(                    : 3 8 9 59 60 61 62
)                    : 3 8 9 59 60 61 62
*                    : 14 22
+                    : 26
,                    : 20 80
-                    : 12 27
.                    : 7
/                    : 23
:                    : 6 53
;                    : 57 58 75
<                    : 32
=                    : 55 82
>                    : 33
?                    : 53
ADD_ASSIGN           : 56
CONSTANT             : 2
D                    : 77
DEC_OP               : 17
ELSE                 : 60
EQ_OP                : 38
FOR                  : 62
GE_OP                : 35
IDENTIFIER           : 1 7 81 82
IF                   : 59 60
INC_OP               : 10 16
IS                   : 51
LAND_OP              : 47
LEFT_OP              : 29
LE_OP                : 34
LOR_OP               : 49
NE_OP                : 39
REL_OP               : 36
RIGHT_OP             : 30
STRING               : 
UD                   : 76
WHILE                : 61
[                    : 5 6
]                    : 5 6
^                    : 43
bit                  : 78
error                : 
{                    : 63 64 65 66
|                    : 45
}                    : 63 64 65 66
~                    : 18

Nonterminals, with rules where they appear

additive_expression  : 26 27 28 29 30
and_expression       : 41 42 43
argument_expression_list : 9 20
compound_statement   : 68
conditional_expression : 53 54 55 56
declaration          : 73 74
declaration_list     : 65 66 74 84
declaration_specifiers : 75
equality_expression  : 38 39 40 41
exclusive_or_expression : 43 44 45
expression           : 3 5 6 6 19 20 53 58 59 60 61 62 82
expression_statement : 62 62 67
inclusive_or_expression : 45 46 47
init_declarator      : 79 80
init_declarator_list : 75 80
iteration_statement  : 69
logical_and_expression : 47 48 49
logical_is_expression : 52 53
logical_or_expression : 49 50 51 51
multiplicative_expression : 22 23 24 25 26 27
postfix_expression   : 5 6 7 8 9 10 11
primary_expression   : 4
relational_expression : 32 33 34 35 36 37 38 39
selection_statement  : 70
shift_expression     : 29 30 31 32 33 34 35 36
startpoint           : 0
statement            : 59 60 60 61 62 71 72
statement_list       : 64 66 72 83 84
unary_expression     : 12 13 14 15 16 17 18 21 22 23 24 55 56

Parsing method: LALR

state 0

    (0) S' -> . startpoint
    (83) startpoint -> . statement_list
    (84) startpoint -> . declaration_list statement_list
    (71) statement_list -> . statement
    (72) statement_list -> . statement_list statement
    (73) declaration_list -> . declaration
    (74) declaration_list -> . declaration_list declaration
    (67) statement -> . expression_statement
    (68) statement -> . compound_statement
    (69) statement -> . iteration_statement
    (70) statement -> . selection_statement
    (75) declaration -> . declaration_specifiers init_declarator_list ;
    (57) expression_statement -> . ;
    (58) expression_statement -> . expression ;
    (63) compound_statement -> . { }
    (64) compound_statement -> . { statement_list }
    (65) compound_statement -> . { declaration_list }
    (66) compound_statement -> . { declaration_list statement_list }
    (61) iteration_statement -> . WHILE ( expression ) statement
    (62) iteration_statement -> . FOR ( expression_statement expression_statement expression ) statement
    (59) selection_statement -> . IF ( expression ) statement
    (60) selection_statement -> . IF ( expression ) statement ELSE statement
    (76) declaration_specifiers -> . UD
    (77) declaration_specifiers -> . D
    (78) declaration_specifiers -> . bit
    (54) expression -> . conditional_expression
    (55) expression -> . unary_expression = conditional_expression
    (56) expression -> . unary_expression ADD_ASSIGN conditional_expression
    (52) conditional_expression -> . logical_is_expression
    (53) conditional_expression -> . logical_is_expression ? expression : conditional_expression
    (11) unary_expression -> . postfix_expression
    (12) unary_expression -> . - unary_expression
    (13) unary_expression -> . ! unary_expression
    (14) unary_expression -> . * unary_expression
    (15) unary_expression -> . & unary_expression
    (16) unary_expression -> . INC_OP unary_expression
    (17) unary_expression -> . DEC_OP unary_expression
    (18) unary_expression -> . ~ unary_expression
    (50) logical_is_expression -> . logical_or_expression
    (51) logical_is_expression -> . logical_or_expression IS logical_or_expression
    (4) postfix_expression -> . primary_expression
    (5) postfix_expression -> . postfix_expression [ expression ]
    (6) postfix_expression -> . postfix_expression [ expression : expression ]
    (7) postfix_expression -> . postfix_expression . IDENTIFIER
    (8) postfix_expression -> . postfix_expression ( )
    (9) postfix_expression -> . postfix_expression ( argument_expression_list )
    (10) postfix_expression -> . postfix_expression INC_OP
    (48) logical_or_expression -> . logical_and_expression
    (49) logical_or_expression -> . logical_or_expression LOR_OP logical_and_expression
    (1) primary_expression -> . IDENTIFIER
    (2) primary_expression -> . CONSTANT
    (3) primary_expression -> . ( expression )
    (46) logical_and_expression -> . inclusive_or_expression
    (47) logical_and_expression -> . logical_and_expression LAND_OP inclusive_or_expression
    (44) inclusive_or_expression -> . exclusive_or_expression
    (45) inclusive_or_expression -> . inclusive_or_expression | exclusive_or_expression
    (42) exclusive_or_expression -> . and_expression
    (43) exclusive_or_expression -> . exclusive_or_expression ^ and_expression
    (40) and_expression -> . equality_expression
    (41) and_expression -> . and_expression & equality_expression
    (37) equality_expression -> . relational_expression
    (38) equality_expression -> . equality_expression EQ_OP relational_expression
    (39) equality_expression -> . equality_expression NE_OP relational_expression
    (31) relational_expression -> . shift_expression
    (32) relational_expression -> . relational_expression < shift_expression
    (33) relational_expression -> . relational_expression > shift_expression
    (34) relational_expression -> . relational_expression LE_OP shift_expression
    (35) relational_expression -> . relational_expression GE_OP shift_expression
    (36) relational_expression -> . relational_expression REL_OP shift_expression
    (28) shift_expression -> . additive_expression
    (29) shift_expression -> . shift_expression LEFT_OP additive_expression
    (30) shift_expression -> . shift_expression RIGHT_OP additive_expression
    (25) additive_expression -> . multiplicative_expression
    (26) additive_expression -> . additive_expression + multiplicative_expression
    (27) additive_expression -> . additive_expression - multiplicative_expression
    (21) multiplicative_expression -> . unary_expression
    (22) multiplicative_expression -> . multiplicative_expression * unary_expression
    (23) multiplicative_expression -> . multiplicative_expression / unary_expression
    (24) multiplicative_expression -> . multiplicative_expression % unary_expression

    ;               shift and go to state 11
    {               shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 16
    IF              shift and go to state 17
    UD              shift and go to state 18
    D               shift and go to state 19
    bit             shift and go to state 20
    -               shift and go to state 25
    !               shift and go to state 26
    *               shift and go to state 27
    &               shift and go to state 28
    INC_OP          shift and go to state 29
    DEC_OP          shift and go to state 30
    ~               shift and go to state 31
    IDENTIFIER      shift and go to state 34
    CONSTANT        shift and go to state 36
    (               shift and go to state 15

    startpoint                     shift and go to state 1
    statement_list                 shift and go to state 2
    declaration_list               shift and go to state 3
    statement                      shift and go to state 4
    declaration                    shift and go to state 5
    expression_statement           shift and go to state 6
    compound_statement             shift and go to state 7
    iteration_statement            shift and go to state 8
    selection_statement            shift and go to state 9
    declaration_specifiers         shift and go to state 10
    expression                     shift and go to state 12
    conditional_expression         shift and go to state 21
    unary_expression               shift and go to state 22
    logical_is_expression          shift and go to state 23
    postfix_expression             shift and go to state 24
    logical_or_expression          shift and go to state 32
    primary_expression             shift and go to state 33
    logical_and_expression         shift and go to state 35
    inclusive_or_expression        shift and go to state 37
    exclusive_or_expression        shift and go to state 38
    and_expression                 shift and go to state 39
    equality_expression            shift and go to state 40
    relational_expression          shift and go to state 41
    shift_expression               shift and go to state 42
    additive_expression            shift and go to state 43
    multiplicative_expression      shift and go to state 44

state 1

    (0) S' -> startpoint .



state 2

    (83) startpoint -> statement_list .
    (72) statement_list -> statement_list . statement
    (67) statement -> . expression_statement
    (68) statement -> . compound_statement
    (69) statement -> . iteration_statement
    (70) statement -> . selection_statement
    (57) expression_statement -> . ;
    (58) expression_statement -> . expression ;
    (63) compound_statement -> . { }
    (64) compound_statement -> . { statement_list }
    (65) compound_statement -> . { declaration_list }
    (66) compound_statement -> . { declaration_list statement_list }
    (61) iteration_statement -> . WHILE ( expression ) statement
    (62) iteration_statement -> . FOR ( expression_statement expression_statement expression ) statement
    (59) selection_statement -> . IF ( expression ) statement
    (60) selection_statement -> . IF ( expression ) statement ELSE statement
    (54) expression -> . conditional_expression
    (55) expression -> . unary_expression = conditional_expression
    (56) expression -> . unary_expression ADD_ASSIGN conditional_expression
    (52) conditional_expression -> . logical_is_expression
    (53) conditional_expression -> . logical_is_expression ? expression : conditional_expression
    (11) unary_expression -> . postfix_expression
    (12) unary_expression -> . - unary_expression
    (13) unary_expression -> . ! unary_expression
    (14) unary_expression -> . * unary_expression
    (15) unary_expression -> . & unary_expression
    (16) unary_expression -> . INC_OP unary_expression
    (17) unary_expression -> . DEC_OP unary_expression
    (18) unary_expression -> . ~ unary_expression
    (50) logical_is_expression -> . logical_or_expression
    (51) logical_is_expression -> . logical_or_expression IS logical_or_expression
    (4) postfix_expression -> . primary_expression
    (5) postfix_expression -> . postfix_expression [ expression ]
    (6) postfix_expression -> . postfix_expression [ expression : expression ]
    (7) postfix_expression -> . postfix_expression . IDENTIFIER
    (8) postfix_expression -> . postfix_expression ( )
    (9) postfix_expression -> . postfix_expression ( argument_expression_list )
    (10) postfix_expression -> . postfix_expression INC_OP
    (48) logical_or_expression -> . logical_and_expression
    (49) logical_or_expression -> . logical_or_expression LOR_OP logical_and_expression
    (1) primary_expression -> . IDENTIFIER
    (2) primary_expression -> . CONSTANT
    (3) primary_expression -> . ( expression )
    (46) logical_and_expression -> . inclusive_or_expression
    (47) logical_and_expression -> . logical_and_expression LAND_OP inclusive_or_expression
    (44) inclusive_or_expression -> . exclusive_or_expression
    (45) inclusive_or_expression -> . inclusive_or_expression | exclusive_or_expression
    (42) exclusive_or_expression -> . and_expression
    (43) exclusive_or_expression -> . exclusive_or_expression ^ and_expression
    (40) and_expression -> . equality_expression
    (41) and_expression -> . and_expression & equality_expression
    (37) equality_expression -> . relational_expression
    (38) equality_expression -> . equality_expression EQ_OP relational_expression
    (39) equality_expression -> . equality_expression NE_OP relational_expression
    (31) relational_expression -> . shift_expression
    (32) relational_expression -> . relational_expression < shift_expression
    (33) relational_expression -> . relational_expression > shift_expression
    (34) relational_expression -> . relational_expression LE_OP shift_expression
    (35) relational_expression -> . relational_expression GE_OP shift_expression
    (36) relational_expression -> . relational_expression REL_OP shift_expression
    (28) shift_expression -> . additive_expression
    (29) shift_expression -> . shift_expression LEFT_OP additive_expression
    (30) shift_expression -> . shift_expression RIGHT_OP additive_expression
    (25) additive_expression -> . multiplicative_expression
    (26) additive_expression -> . additive_expression + multiplicative_expression
    (27) additive_expression -> . additive_expression - multiplicative_expression
    (21) multiplicative_expression -> . unary_expression
    (22) multiplicative_expression -> . multiplicative_expression * unary_expression
    (23) multiplicative_expression -> . multiplicative_expression / unary_expression
    (24) multiplicative_expression -> . multiplicative_expression % unary_expression

    $end            reduce using rule 83 (startpoint -> statement_list .)
    ;               shift and go to state 11
    {               shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 16
    IF              shift and go to state 17
    -               shift and go to state 25
    !               shift and go to state 26
    *               shift and go to state 27
    &               shift and go to state 28
    INC_OP          shift and go to state 29
    DEC_OP          shift and go to state 30
    ~               shift and go to state 31
    IDENTIFIER      shift and go to state 34
    CONSTANT        shift and go to state 36
    (               shift and go to state 15

    statement                      shift and go to state 45
    expression_statement           shift and go to state 6
    compound_statement             shift and go to state 7
    iteration_statement            shift and go to state 8
    selection_statement            shift and go to state 9
    expression                     shift and go to state 12
    conditional_expression         shift and go to state 21
    unary_expression               shift and go to state 22
    logical_is_expression          shift and go to state 23
    postfix_expression             shift and go to state 24
    logical_or_expression          shift and go to state 32
    primary_expression             shift and go to state 33
    logical_and_expression         shift and go to state 35
    inclusive_or_expression        shift and go to state 37
    exclusive_or_expression        shift and go to state 38
    and_expression                 shift and go to state 39
    equality_expression            shift and go to state 40
    relational_expression          shift and go to state 41
    shift_expression               shift and go to state 42
    additive_expression            shift and go to state 43
    multiplicative_expression      shift and go to state 44

state 3

    (84) startpoint -> declaration_list . statement_list
    (74) declaration_list -> declaration_list . declaration
    (71) statement_list -> . statement
    (72) statement_list -> . statement_list statement
    (75) declaration -> . declaration_specifiers init_declarator_list ;
    (67) statement -> . expression_statement
    (68) statement -> . compound_statement
    (69) statement -> . iteration_statement
    (70) statement -> . selection_statement
    (76) declaration_specifiers -> . UD
    (77) declaration_specifiers -> . D
    (78) declaration_specifiers -> . bit
    (57) expression_statement -> . ;
    (58) expression_statement -> . expression ;
    (63) compound_statement -> . { }
    (64) compound_statement -> . { statement_list }
    (65) compound_statement -> . { declaration_list }
    (66) compound_statement -> . { declaration_list statement_list }
    (61) iteration_statement -> . WHILE ( expression ) statement
    (62) iteration_statement -> . FOR ( expression_statement expression_statement expression ) statement
    (59) selection_statement -> . IF ( expression ) statement
    (60) selection_statement -> . IF ( expression ) statement ELSE statement
    (54) expression -> . conditional_expression
    (55) expression -> . unary_expression = conditional_expression
    (56) expression -> . unary_expression ADD_ASSIGN conditional_expression
    (52) conditional_expression -> . logical_is_expression
    (53) conditional_expression -> . logical_is_expression ? expression : conditional_expression
    (11) unary_expression -> . postfix_expression
    (12) unary_expression -> . - unary_expression
    (13) unary_expression -> . ! unary_expression
    (14) unary_expression -> . * unary_expression
    (15) unary_expression -> . & unary_expression
    (16) unary_expression -> . INC_OP unary_expression
    (17) unary_expression -> . DEC_OP unary_expression
    (18) unary_expression -> . ~ unary_expression
    (50) logical_is_expression -> . logical_or_expression
    (51) logical_is_expression -> . logical_or_expression IS logical_or_expression
    (4) postfix_expression -> . primary_expression
    (5) postfix_expression -> . postfix_expression [ expression ]
    (6) postfix_expression -> . postfix_expression [ expression : expression ]
    (7) postfix_expression -> . postfix_expression . IDENTIFIER
    (8) postfix_expression -> . postfix_expression ( )
    (9) postfix_expression -> . postfix_expression ( argument_expression_list )
    (10) postfix_expression -> . postfix_expression INC_OP
    (48) logical_or_expression -> . logical_and_expression
    (49) logical_or_expression -> . logical_or_expression LOR_OP logical_and_expression
    (1) primary_expression -> . IDENTIFIER
    (2) primary_expression -> . CONSTANT
    (3) primary_expression -> . ( expression )
    (46) logical_and_expression -> . inclusive_or_expression
    (47) logical_and_expression -> . logical_and_expression LAND_OP inclusive_or_expression
    (44) inclusive_or_expression -> . exclusive_or_expression
    (45) inclusive_or_expression -> . inclusive_or_expression | exclusive_or_expression
    (42) exclusive_or_expression -> . and_expression
    (43) exclusive_or_expression -> . exclusive_or_expression ^ and_expression
    (40) and_expression -> . equality_expression
    (41) and_expression -> . and_expression & equality_expression
    (37) equality_expression -> . relational_expression
    (38) equality_expression -> . equality_expression EQ_OP relational_expression
    (39) equality_expression -> . equality_expression NE_OP relational_expression
    (31) relational_expression -> . shift_expression
    (32) relational_expression -> . relational_expression < shift_expression
    (33) relational_expression -> . relational_expression > shift_expression
    (34) relational_expression -> . relational_expression LE_OP shift_expression
    (35) relational_expression -> . relational_expression GE_OP shift_expression
    (36) relational_expression -> . relational_expression REL_OP shift_expression
    (28) shift_expression -> . additive_expression
    (29) shift_expression -> . shift_expression LEFT_OP additive_expression
    (30) shift_expression -> . shift_expression RIGHT_OP additive_expression
    (25) additive_expression -> . multiplicative_expression
    (26) additive_expression -> . additive_expression + multiplicative_expression
    (27) additive_expression -> . additive_expression - multiplicative_expression
    (21) multiplicative_expression -> . unary_expression
    (22) multiplicative_expression -> . multiplicative_expression * unary_expression
    (23) multiplicative_expression -> . multiplicative_expression / unary_expression
    (24) multiplicative_expression -> . multiplicative_expression % unary_expression

    UD              shift and go to state 18
    D               shift and go to state 19
    bit             shift and go to state 20
    ;               shift and go to state 11
    {               shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 16
    IF              shift and go to state 17
    -               shift and go to state 25
    !               shift and go to state 26
    *               shift and go to state 27
    &               shift and go to state 28
    INC_OP          shift and go to state 29
    DEC_OP          shift and go to state 30
    ~               shift and go to state 31
    IDENTIFIER      shift and go to state 34
    CONSTANT        shift and go to state 36
    (               shift and go to state 15

    statement_list                 shift and go to state 46
    declaration                    shift and go to state 47
    statement                      shift and go to state 4
    declaration_specifiers         shift and go to state 10
    expression_statement           shift and go to state 6
    compound_statement             shift and go to state 7
    iteration_statement            shift and go to state 8
    selection_statement            shift and go to state 9
    expression                     shift and go to state 12
    conditional_expression         shift and go to state 21
    unary_expression               shift and go to state 22
    logical_is_expression          shift and go to state 23
    postfix_expression             shift and go to state 24
    logical_or_expression          shift and go to state 32
    primary_expression             shift and go to state 33
    logical_and_expression         shift and go to state 35
    inclusive_or_expression        shift and go to state 37
    exclusive_or_expression        shift and go to state 38
    and_expression                 shift and go to state 39
    equality_expression            shift and go to state 40
    relational_expression          shift and go to state 41
    shift_expression               shift and go to state 42
    additive_expression            shift and go to state 43
    multiplicative_expression      shift and go to state 44

state 4

    (71) statement_list -> statement .

    ;               reduce using rule 71 (statement_list -> statement .)
    {               reduce using rule 71 (statement_list -> statement .)
    WHILE           reduce using rule 71 (statement_list -> statement .)
    FOR             reduce using rule 71 (statement_list -> statement .)
    IF              reduce using rule 71 (statement_list -> statement .)
    -               reduce using rule 71 (statement_list -> statement .)
    !               reduce using rule 71 (statement_list -> statement .)
    *               reduce using rule 71 (statement_list -> statement .)
    &               reduce using rule 71 (statement_list -> statement .)
    INC_OP          reduce using rule 71 (statement_list -> statement .)
    DEC_OP          reduce using rule 71 (statement_list -> statement .)
    ~               reduce using rule 71 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 71 (statement_list -> statement .)
    CONSTANT        reduce using rule 71 (statement_list -> statement .)
    (               reduce using rule 71 (statement_list -> statement .)
    $end            reduce using rule 71 (statement_list -> statement .)
    }               reduce using rule 71 (statement_list -> statement .)


state 5

    (73) declaration_list -> declaration .

    UD              reduce using rule 73 (declaration_list -> declaration .)
    D               reduce using rule 73 (declaration_list -> declaration .)
    bit             reduce using rule 73 (declaration_list -> declaration .)
    ;               reduce using rule 73 (declaration_list -> declaration .)
    {               reduce using rule 73 (declaration_list -> declaration .)
    WHILE           reduce using rule 73 (declaration_list -> declaration .)
    FOR             reduce using rule 73 (declaration_list -> declaration .)
    IF              reduce using rule 73 (declaration_list -> declaration .)
    -               reduce using rule 73 (declaration_list -> declaration .)
    !               reduce using rule 73 (declaration_list -> declaration .)
    *               reduce using rule 73 (declaration_list -> declaration .)
    &               reduce using rule 73 (declaration_list -> declaration .)
    INC_OP          reduce using rule 73 (declaration_list -> declaration .)
    DEC_OP          reduce using rule 73 (declaration_list -> declaration .)
    ~               reduce using rule 73 (declaration_list -> declaration .)
    IDENTIFIER      reduce using rule 73 (declaration_list -> declaration .)
    CONSTANT        reduce using rule 73 (declaration_list -> declaration .)
    (               reduce using rule 73 (declaration_list -> declaration .)
    }               reduce using rule 73 (declaration_list -> declaration .)


state 6

    (67) statement -> expression_statement .

    ;               reduce using rule 67 (statement -> expression_statement .)
    {               reduce using rule 67 (statement -> expression_statement .)
    WHILE           reduce using rule 67 (statement -> expression_statement .)
    FOR             reduce using rule 67 (statement -> expression_statement .)
    IF              reduce using rule 67 (statement -> expression_statement .)
    -               reduce using rule 67 (statement -> expression_statement .)
    !               reduce using rule 67 (statement -> expression_statement .)
    *               reduce using rule 67 (statement -> expression_statement .)
    &               reduce using rule 67 (statement -> expression_statement .)
    INC_OP          reduce using rule 67 (statement -> expression_statement .)
    DEC_OP          reduce using rule 67 (statement -> expression_statement .)
    ~               reduce using rule 67 (statement -> expression_statement .)
    IDENTIFIER      reduce using rule 67 (statement -> expression_statement .)
    CONSTANT        reduce using rule 67 (statement -> expression_statement .)
    (               reduce using rule 67 (statement -> expression_statement .)
    $end            reduce using rule 67 (statement -> expression_statement .)
    }               reduce using rule 67 (statement -> expression_statement .)
    ELSE            reduce using rule 67 (statement -> expression_statement .)


state 7

    (68) statement -> compound_statement .

    ;               reduce using rule 68 (statement -> compound_statement .)
    {               reduce using rule 68 (statement -> compound_statement .)
    WHILE           reduce using rule 68 (statement -> compound_statement .)
    FOR             reduce using rule 68 (statement -> compound_statement .)
    IF              reduce using rule 68 (statement -> compound_statement .)
    -               reduce using rule 68 (statement -> compound_statement .)
    !               reduce using rule 68 (statement -> compound_statement .)
    *               reduce using rule 68 (statement -> compound_statement .)
    &               reduce using rule 68 (statement -> compound_statement .)
    INC_OP          reduce using rule 68 (statement -> compound_statement .)
    DEC_OP          reduce using rule 68 (statement -> compound_statement .)
    ~               reduce using rule 68 (statement -> compound_statement .)
    IDENTIFIER      reduce using rule 68 (statement -> compound_statement .)
    CONSTANT        reduce using rule 68 (statement -> compound_statement .)
    (               reduce using rule 68 (statement -> compound_statement .)
    $end            reduce using rule 68 (statement -> compound_statement .)
    }               reduce using rule 68 (statement -> compound_statement .)
    ELSE            reduce using rule 68 (statement -> compound_statement .)


state 8

    (69) statement -> iteration_statement .

    ;               reduce using rule 69 (statement -> iteration_statement .)
    {               reduce using rule 69 (statement -> iteration_statement .)
    WHILE           reduce using rule 69 (statement -> iteration_statement .)
    FOR             reduce using rule 69 (statement -> iteration_statement .)
    IF              reduce using rule 69 (statement -> iteration_statement .)
    -               reduce using rule 69 (statement -> iteration_statement .)
    !               reduce using rule 69 (statement -> iteration_statement .)
    *               reduce using rule 69 (statement -> iteration_statement .)
    &               reduce using rule 69 (statement -> iteration_statement .)
    INC_OP          reduce using rule 69 (statement -> iteration_statement .)
    DEC_OP          reduce using rule 69 (statement -> iteration_statement .)
    ~               reduce using rule 69 (statement -> iteration_statement .)
    IDENTIFIER      reduce using rule 69 (statement -> iteration_statement .)
    CONSTANT        reduce using rule 69 (statement -> iteration_statement .)
    (               reduce using rule 69 (statement -> iteration_statement .)
    $end            reduce using rule 69 (statement -> iteration_statement .)
    }               reduce using rule 69 (statement -> iteration_statement .)
    ELSE            reduce using rule 69 (statement -> iteration_statement .)


state 9

    (70) statement -> selection_statement .

    ;               reduce using rule 70 (statement -> selection_statement .)
    {               reduce using rule 70 (statement -> selection_statement .)
    WHILE           reduce using rule 70 (statement -> selection_statement .)
    FOR             reduce using rule 70 (statement -> selection_statement .)
    IF              reduce using rule 70 (statement -> selection_statement .)
    -               reduce using rule 70 (statement -> selection_statement .)
    !               reduce using rule 70 (statement -> selection_statement .)
    *               reduce using rule 70 (statement -> selection_statement .)
    &               reduce using rule 70 (statement -> selection_statement .)
    INC_OP          reduce using rule 70 (statement -> selection_statement .)
    DEC_OP          reduce using rule 70 (statement -> selection_statement .)
    ~               reduce using rule 70 (statement -> selection_statement .)
    IDENTIFIER      reduce using rule 70 (statement -> selection_statement .)
    CONSTANT        reduce using rule 70 (statement -> selection_statement .)
    (               reduce using rule 70 (statement -> selection_statement .)
    $end            reduce using rule 70 (statement -> selection_statement .)
    }               reduce using rule 70 (statement -> selection_statement .)
    ELSE            reduce using rule 70 (statement -> selection_statement .)


state 10

    (75) declaration -> declaration_specifiers . init_declarator_list ;
    (79) init_declarator_list -> . init_declarator
    (80) init_declarator_list -> . init_declarator_list , init_declarator
    (81) init_declarator -> . IDENTIFIER
    (82) init_declarator -> . IDENTIFIER = expression

    IDENTIFIER      shift and go to state 50

    init_declarator_list           shift and go to state 48
    init_declarator                shift and go to state 49

state 11

    (57) expression_statement -> ; .

    ;               reduce using rule 57 (expression_statement -> ; .)
    {               reduce using rule 57 (expression_statement -> ; .)
    WHILE           reduce using rule 57 (expression_statement -> ; .)
    FOR             reduce using rule 57 (expression_statement -> ; .)
    IF              reduce using rule 57 (expression_statement -> ; .)
    -               reduce using rule 57 (expression_statement -> ; .)
    !               reduce using rule 57 (expression_statement -> ; .)
    *               reduce using rule 57 (expression_statement -> ; .)
    &               reduce using rule 57 (expression_statement -> ; .)
    INC_OP          reduce using rule 57 (expression_statement -> ; .)
    DEC_OP          reduce using rule 57 (expression_statement -> ; .)
    ~               reduce using rule 57 (expression_statement -> ; .)
    IDENTIFIER      reduce using rule 57 (expression_statement -> ; .)
    CONSTANT        reduce using rule 57 (expression_statement -> ; .)
    (               reduce using rule 57 (expression_statement -> ; .)
    $end            reduce using rule 57 (expression_statement -> ; .)
    }               reduce using rule 57 (expression_statement -> ; .)
    ELSE            reduce using rule 57 (expression_statement -> ; .)


state 12

    (58) expression_statement -> expression . ;

    ;               shift and go to state 51


state 13
